# DepthTransfer

./: .gitignore  README.md  depth_transfer.yaml  setup.py
aerial_gym/: __init__.py
aerial_gym/data/: loaders.py
aerial_gym/dr/assets/export/: drone_quadcopter.urdf  geom_cuboid_wireframe.urdf  geom_cylinder.urdf  geom_hollow_cuboid.urdf  track_multistory.urdf  track_rmua.urdf  track_walls.urdf
aerial_gym/dr/env/: env_creator.py
aerial_gym/dr/managers/: drone_manager.py  obstacle_manager.py
aerial_gym/dr/waypoint/: waypoint_data.py  waypoint_tracker.py
aerial_gym/envs/: __init__.py
aerial_gym/envs/assets/: __init__.py
aerial_gym/envs/assets/drones/: quadcopter.py
aerial_gym/envs/assets/export/: drone_quadcopter.urdf  geom_cuboid_wireframe.urdf  geom_cylinder.urdf  geom_hollow_cuboid.urdf  kingfisher_250.urdf  track_multistory.urdf  track_rmua.urdf  track_walls.urdf
aerial_gym/envs/assets/tracks/: __init__.py  rmua.py  splits.py  walls.py
aerial_gym/envs/base/: base_task.py  drone_racing_task.py  drone_racing_task_config.py  mavrl_task.py  mavrl_task_agile_config.py  mavrl_task_config.py  zoo_task_config.py
aerial_gym/envs/controllers/: acceleration_control.py  attitude_control.py  controller.py  low_pass_filter.py  position_control.py  velocity_control.py  velocity_steeing_angle_controller.py
aerial_gym/envs/drone_sim/controllers/: simple_betaflight.py
aerial_gym/envs/drone_sim/models/: rotor_poly_lag.py
aerial_gym/envs/mavrl/: mavrl_vec_env.py  mavrl_vec_env_v2.py  mavrl_vec_rnn_env.py
aerial_gym/envs/reference/: reference_base.py
aerial_gym/mav_baselines/: __init__.py
aerial_gym/mav_baselines/torch/common/: running_mean_std.py  util.py
aerial_gym/mav_baselines/torch/controlNet/cldm/: model.py
aerial_gym/mav_baselines/torch/controlNet/ldm/models/: autoencoder.py
aerial_gym/mav_baselines/torch/controlNet/ldm/modules/: attention.py
aerial_gym/mav_baselines/torch/controlNet/ldm/modules/diffusionmodules/: model.py  util.py
aerial_gym/mav_baselines/torch/controlNet/ldm/modules/losses/: __init__.py  autoencoder_kl.py  contperceptual.py  vae_kl_discriminator.py  vqperceptual.py
aerial_gym/mav_baselines/torch/controlNet/models/: autoencoder.yaml  encoder.yaml  loss.yaml
aerial_gym/mav_baselines/torch/controlNet/taming/modules/discriminator/: model.py
aerial_gym/mav_baselines/torch/controlNet/taming/modules/losses/: __init__.py  lpips.py  vqperceptual.py
aerial_gym/mav_baselines/torch/envs/: vec_multi_env_wrapper.py
aerial_gym/mav_baselines/torch/models/: __init__.py  vae.py  vae_320.py
aerial_gym/mav_baselines/torch/ppo/: normal_ppo.py
aerial_gym/mav_baselines/torch/recurrent_ppo/: __init__.py  policies.py  ppo_recurrent.py
aerial_gym/mav_baselines/torch/recurrent_ppo/recurrent/: beta_distribution.py  buffers.py  policies.py  rnn_extractor.py  type_aliases.py
aerial_gym/scripts/: collect_data.py  collect_stereo_data.py  example.py  example_benchmark.py  example_mavrl.py  plot_control.py  process_pcd.py  refine_vae_from_ab_to_gt.py  refine_vae_from_gt_to_stereo.py  refine_vae_from_real_to_gt.py  refine_vae_from_stereo_to_gt.py  refine_vae_resnet_from_sim_stereo_to_gt.py  rerun_exp.py  retrain_ppo.py  stereo_depth_filter_test.py  test_control.py  test_normal_ppo.py  test_rnn_ppo.py  train_domain_adaptation.py  train_lstm.py  train_normal_ppo.py  train_rnn_ppo.py  train_vae.py  train_vae_resnet.py  train_vae_resnet_lsgan_reality.py  train_vae_resnet_lsgan_sim_stereo_depth.py  training_process.txt
aerial_gym/utils/: asset_manager.py  curriculum_manager.py  episode_logger.py  helpers.py  imu_simulator_v2.py  mavrl_asset_manager.py  motor_model.py  pcd_cameras.py  poisson_distribution.py  rerun_loader_urdf.py  rollout_logger.py  rollout_logger_new.py  sampler.py  sgm_depth.py  tensor_imu.py  torch_utils_contrib.py  warp_cam_refactored.py  warp_cam_v2.py  warp_lidar_refactored.py  warp_lidar_v1.py  warp_sensor.py
resources/models/environment_assets/cyberzoo/: 0_9m_cube.urdf  1_2m_cube.urdf  1_5m_cube.urdf  1_5m_cube_thin.urdf  1_8m_cube.urdf  1_8m_cube_thin.urdf  2_4m_cube.urdf  2_4m_cylinder.urdf  2m_cube.urdf  2m_cube_thin.urdf  2m_cylinder.urdf
resources/models/environment_assets/fake_trees/: Hawthorn.urdf  Hawthorn_small.urdf  Lombardy_Poplar.urdf  Lombardy_Poplar_small.urdf
resources/models/environment_assets/forest/: Hawthorn.urdf  Lombardy_Poplar.urdf
resources/models/environment_assets/objects/: 2_4m_cube.urdf  2_4m_cylinder.urdf  cuboidal_rod.urdf  small_cube.urdf
resources/models/environment_assets/panels/: panel.urdf
resources/models/environment_assets/walls/: back_wall.urdf  back_wall_forest.urdf  bottom_wall.urdf  bottom_wall_forest.urdf  forests.material  front_wall.urdf  front_wall_forest.urdf  left_wall.urdf  left_wall_forest.urdf  right_wall.urdf  right_wall_flip.urdf  right_wall_forest.urdf  top_wall.urdf
resources/robots/quad/: model.urdf
sgm/: CMakeLists.txt  setup.py
sgm/src/sgm_gpu/: sgm_gpu.cu
sgm/src/wrapper/: sgm_wrapper.cpp
